Used grid to make all items same height and fixed items not scrolling back to start on mobile

--- a/src/components/css/button.scss
+++ b/src/components/css/button.scss
@@ -32,12 +32,12 @@
     margin-bottom: 16px;
     transition: 0.5s;
 
-    &:active {
+    &:active:not(:disabled)  {
         background-color: #555555;
 	    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.24), 0px 0px 8px rgba(0, 0, 0, 0.12);
     }
 
-    &:hover {
+    &:hover:not(:disabled) {
         color: white;
         background-color: #555555;
 	    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.24), 0px 0px 8px rgba(0, 0, 0, 0.12);
@@ -45,7 +45,7 @@
 
     &:disabled {
         background-color: rgba(79, 79, 79, 0.26);
-        color: rgba(0, 0, 0, 0.38);
+        color: #3C4858;
         cursor: not-allowed;
     }
 }
