--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -103,10 +103,6 @@ h2.title {
     line-height: 1
 }
 
-.col-md-4:nth-child(3n+0) {
-	margin-bottom: 70px;
-}
-
 .col-md-6 {
     flex: 0 0 50%;
     max-width: 50%
